[tool.poetry]
name = "susep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
